--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -5,7 +5,7 @@
     min-width: 100vw;    
     overflow: auto;
 }
-.container{
+.mainContainer{
      display: flex;
     flex-direction: column;
     justify-content: center;
