--- a/src/components/Jobs/jobs.css
+++ b/src/components/Jobs/jobs.css
@@ -1,26 +1,41 @@
 .container{
     padding:20px;
+    display: flex;
+    flex-direction:row;
+   justify-content: center;
+    align-items: flex-start;
 }
 .leftContainer{
-    width:25%;
+    margin-right: 20px;
     padding-top: 10px;
+     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 .rightContainer{
     width: 60%;
 }
 .profileData{
     background-image: url("https://assets.ccbp.in/frontend/react-js/profile-bg.png") ;
+     height:30vh;
     display: flex;
     flex-direction:column ;
     justify-content: flex-start;
     background-size: cover;
     padding-left: 20px;
     padding-right:10px ;
+    border-radius: 10px;    
 }
 .headingName{
     font-size: 20px;
      width: 100%;
-   
+}
+.whiteHead{
+    color: #ffffff;
+    font-size: 12px;
+    width: 100%;
+    margin-top: 10px;
 }
 .paraOfBio{
  width: 100%;    
