--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,9 +1,10 @@
 .homeContainer{
     background-image: url('https://assets.ccbp.in/frontend/react-js/home-lg-bg.png');
     background-size: cover;
-    min-height: 100%;
+    min-height: 100vh;
     min-width: 100vw;    
     overflow: auto;
+
 }
 .mainContainer{
      display: flex;
@@ -12,6 +13,7 @@
     align-items: flex-start;
     padding-left: 40px;
     color: #ffffff;
+
 
 }
 h1{
@@ -29,5 +31,6 @@ font-size: 20px;
     border-radius: 8px;
     color: white;
     background-color: #6366f1;
+    cursor: pointer;
 
 }
